Fix alignment of icons

--- a/src/sass/layout/layout.scss
+++ b/src/sass/layout/layout.scss
@@ -110,9 +110,9 @@ body
         position: relative; 
     
         .fa {
-            margin-right: 6px;
+            margin-right: 8px;
             position: relative;
-            bottom: -3px;
+            bottom: -2px;
         }
 
         .notes {
@@ -165,6 +165,7 @@ body
 
             .fa {
                 margin-right: 8px;
+                bottom: -5px;
             }
 
             a {
